# todo-application

./: .gitignore  LICENSE  README.md  docker-compose.yaml  nginx.conf
todo_api/: .dockerignore  Dockerfile  README.md  pyproject.toml  tox.ini
todo_api/src/todo/: settings.py  urls.py
todo_webui/: Dockerfile  next.config.mjs  package-lock.json  package.json
